objects/metazoa3__snapshot_task__c.object
<CustomObject>
    <description>This is an administrative object for Snapshot Change and Release Automation. This object records the asset and task information for the parent Snapshot Story.</description>
    <fields>
        <fullName>metazoa3__body_hash__c</fullName>
        <label>Body Hash</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__display_index__c</fullName>
        <label>Display Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_field_one__c</fullName>
        <label>Extra Field One</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_field_two__c</fullName>
        <label>Extra Field Two</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_flag_one__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Flag One</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__extra_flag_two__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Flag Two</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metazoa3__job_fragment__c</fullName>
        <label>Job Fragment</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__metadata_body__c</fullName>
        <label>Metadata Body</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__object_type__c</fullName>
        <label>Object Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metazoa3__overflow_one__c</fullName>
        <label>Overflow One</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__overflow_two__c</fullName>
        <label>Overflow Two</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>metazoa3__snapshot_story__c</fullName>
        <label>Snapshot Story</label>
        <referenceTo>metazoa3__snapshot_story__c</referenceTo>
        <relationshipLabel>Snapshot Tasks</relationshipLabel>
        <relationshipName>Snapshot_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>metazoa3__task_type__c</fullName>
        <label>Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Before Task</fullName>
                </value>
                <value>
                    <fullName>Create Asset</fullName>
                </value>
                <value>
                    <fullName>Delete Asset</fullName>
                </value>
                <value>
                    <fullName>After Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Snapshot Task</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Snapshot Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>